--- a/protocolos.html
+++ b/protocolos.html
@@ -5,35 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Protocolos Online</title>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      background-color: #f8f8f8;
-      font-family: Arial, sans-serif;
-    }
-    .container {
       width: 100%;
-      max-width: 1200px;
-      margin: 40px auto;
-      padding: 0 10px;
+      height: 100%;
+      overflow: hidden;
+      background-color: #000; /* opcional: deixa fundo neutro em telas largas */
     }
     iframe {
-      border: 1px solid lightgray;
+      position: fixed;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: 80vh;
-      border-radius: 8px;
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <iframe 
-      allowfullscreen="allowfullscreen" 
-      allow="clipboard-write" 
-      scrolling="no" 
-      class="fp-iframe" 
-      src="https://heyzine.com/flip-book/f422c9899d.html">
-    </iframe>
-  </div>
+  <iframe 
+    allowfullscreen="allowfullscreen" 
+    allow="clipboard-write" 
+    scrolling="no" 
+    class="fp-iframe" 
+    src="https://heyzine.com/flip-book/f422c9899d.html">
+  </iframe>
 </body>
 </html>
