--- a/protocolos.html
+++ b/protocolos.html
@@ -5,31 +5,64 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
   <title>Protocolos Online</title>
   <style>
+    /* Zera tudo e garante máximo aproveitamento */
     html, body {
       margin: 0;
       padding: 0;
       width: 100vw;
       height: 100vh;
-      background: #000;
       overflow: hidden;
+      background-color: #000; /* Pode trocar pra #fff se preferir fundo claro */
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
+
+    /* Container para manter proporção e centralizar */
+    .iframe-container {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      max-width: 1200px; /* controla o limite em telas grandes */
+      max-height: 100vh;
+      aspect-ratio: 16 / 9; /* mantém proporção agradável em paisagem */
+      background: #000;
+    }
+
     iframe {
       position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
       border: none;
       display: block;
+      border-radius: 0;
+    }
+
+    /* Ajuste fino para celulares em retrato */
+    @media (max-aspect-ratio: 3/4) {
+      .iframe-container {
+        width: 100vw;
+        height: 100vh;
+        max-width: none;
+        aspect-ratio: auto;
+      }
+      iframe {
+        width: 100vw;
+        height: 100vh;
+      }
     }
   </style>
 </head>
 <body>
-  <iframe 
-    allowfullscreen="allowfullscreen" 
-    allow="clipboard-write" 
-    scrolling="no" 
-    src="https://heyzine.com/flip-book/f422c9899d.html">
-  </iframe>
+  <div class="iframe-container">
+    <iframe 
+      allowfullscreen="allowfullscreen" 
+      allow="clipboard-write" 
+      scrolling="no" 
+      src="https://heyzine.com/flip-book/f422c9899d.html">
+    </iframe>
+  </div>
 </body>
 </html>
